[tool.poetry]
name = "web-hw2"
version = "0.1.0"
description = ""
authors = ["Tetiana Bovanenko <bovanenko17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
